--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "node": "12.x"
   },
   "repository": {
-    "url": "https://theflagquiz-v2.glitch.me/"
+    "url": "https://theflagquiz.glitch.me/"
   },
   "license": "MIT",
   "keywords": [
